--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <li><a href= "#services" key="SERVICES"  id="menu-btn"class="lang">Services</a></li>
                 <li><a href= "#skills" key="SKILLS"  id="menu-btn"class="lang">Skills</a></li>
                 <li><a href= "#contact" key="CONTACT"  id="menu-btn"class="lang">Contact</a></li>
-                <div id="menu-btn" class="dropdown">
+                <!--<div id="menu-btn" class="dropdown">
                     <button class="dropbtn">Language</button>
                     <div class="dropdown-content">
                       <a class="translate" id="en-gb">English</a>
                       <a class="translate" id="zh-tw">Español</a>
                     </div>
-                </div>
+                </div>-->
             </ul>
           
             <div id="menu-btn" class="menu-btn">
