--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       "text-3": "Recruitment, preselection and personal retention",
       "about-me":"Aboute me",
       "text": "I 'm Romina Oyarzo",
-      "text-span": "Founder-IT-Recruiter, Public Accountant",
+      "text-span": "Founder IT Recruiter, Public Accountant",
       "text-p": "Bodybuilding technician / physical trainer / sports nutrition, Astrologer in training, Lover of physical activity and holistic well-being. Committed to the care and protection of the environment and animals. Transit home. Mom of the heart",
       "services": "My services",
       "mision": "Mission",
@@ -285,7 +285,7 @@
       "li-3": "Búsqueda y preselección de candidatas",
       "li-4": "Entrevistas a candidatos",
       "li-5": "Presentar un informe detallado de los candidatos a la empresa",
-      "li-6": "Realiza las devoluciones a los candidatos y acompáñalos en el proceso, evacuando sus dudas",
+      "li-6": "Realizar las devoluciones a los candidatos y acompañarlos en el proceso, evacuando sus dudas",
       "title-right": "RETENCIÓN DEL PERSONAL",
       "li-7": "Asesoramiento en motivación del personal",  
       "li-8": "Diseño de un programa de Beneficios de acuerdo a los requerimientos del cliente",
